Fix the layout on mobile

--- a/main/src/main.styl
+++ b/main/src/main.styl
@@ -62,8 +62,10 @@ nav
   position: fixed
   overflow: hidden
   user-select: none
+  width: 100%
+  height: 100%
   canvas
-    position: fixed
+    position: absolute
     width: 100%
     bottom: 0
   .webgl
